WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280596
Fix more NumberToStringBuffer conversions to use std::span
https://bugs.webkit.org/show_bug.cgi?id=280596
Summary
Fix more NumberToStringBuffer conversions to use std::span
David Kilzer (:ddkilzer)
Reported
2024-09-29 20:10:41 PDT
Fix more NumberToStringBuffer conversions to std::span. Same as previous fix, but in more places (via search for "NumberToStringBuffer buffer" declarations). [WTF] Converting NumberToStringBuffer to std::span should not ignore std::array size <
https://bugs.webkit.org/show_bug.cgi?id=280089
> <
rdar://136388770
> <
https://commits.webkit.org/284325@main
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-29 20:11:16 PDT
<
rdar://problem/136944262
>
David Kilzer (:ddkilzer)
Comment 2
2024-09-29 20:15:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34436
EWS
Comment 3
2024-10-21 10:52:57 PDT
Committed
285520@main
(058660103448): <
https://commits.webkit.org/285520@main
> Reviewed commits have been landed. Closing PR #34436 and removing active labels.
David Kilzer (:ddkilzer)
Comment 4
2024-10-21 11:26:37 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/35531
EWS
Comment 5
2024-10-21 11:38:12 PDT
Committed
285524@main
(79f3a1a3dbc9): <
https://commits.webkit.org/285524@main
> Reviewed commits have been landed. Closing PR #35531 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug