Follow-up: Fix more NumberToStringBuffer conversions to use std::span <https://bugs.webkit.org/show_bug.cgi?id=280596> <rdar://136944262>

Unreviewed follow-up fix.

* Source/WTF/wtf/text/StringConcatenateNumbers.h:
- Remove WTF_ALLOW_UNSAFE_BUFFER_USAGE_{BEGIN,END} macros since
  284325@main or 285520@main fixed all the `-Wunsafe-buffer-usage`
  warnings.

Canonical link: https://commits.webkit.org/285524@main