Source/WTF/wtf/text/StringConcatenateNumbers.h
@@ -27,8 +27,6 @@
 
 #include <wtf/Compiler.h>
 
-WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
-
 #include <wtf/dtoa.h>
 #include <wtf/text/IntegerToStringConversion.h>
 #include <wtf/text/StringConcatenate.h>
@@ -168,5 +166,3 @@ private:
 
 using WTF::FormattedNumber;
 using WTF::FormattedCSSNumber;
-
-WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
